Apply sonar recommandation